--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
-asgiref==3.5.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
 cloudinary==1.29.0
 dj-database-url==0.5.0
 Django==3.2.12
+django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-heroku==0.3.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
-idna==3.3
-mock==4.0.3
 Pillow==9.0.1
 psycopg2==2.9.3
 python-dotenv==0.19.2
-pytz==2021.3
-requests==2.27.1
 six==1.16.0
-sqlparse==0.4.2
-typing_extensions==4.1.1
-urllib3==1.26.9
 whitenoise==6.0.0
