resolution bug react

--- a/static/comments/js/react/package.json
+++ b/static/comments/js/react/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "comment": "npx babel --watch src --out-dir build/ --presets react-app/prod"
   },
   "keywords": [],
   "author": "",
