--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,4 +3,4 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: pip install -r requirements.txt
+  - init: pip install -r requirements.txt && python manage.py migrate
