--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
-POSTGRES_PORT=
+POSTGRES_PORT=5234
 
 # Environment variable for sending emails
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
