fix workflow github action

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,9 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run migrations
-        run: |
-          python manage.py migrate
+      # - name: Run migrations
+      #   run: |
+      #     python manage.py migrate
 
       - name: Run Tests
         run: |
