generation of random data with Faker.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ EMAIL_PORT=
 EMAIL_USE_TLS=
 
 # Environment variable for cloudinary
-CLOUD_NAME=
-API_KEY=
-API_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+
+FILE_LOGGER=
