--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
-name: Mackdin
+name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ["develop", "main"]
+  pull_request:
+    branches: ["develop", "main"]
 
 jobs:
   build:
@@ -10,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10.10, 3.11.2]
+        python-version: [3.9, 3.10.11, 3.11]
 
     steps:
       - uses: actions/checkout@v3
