--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,3 +4,4 @@
 
 tasks:
   - init: pip install -r requirements.txt && python manage.py migrate
+  - run: python manage.py load_data initial_data.json && python manage.py runserver
