--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=5234
 
+DATABASE_URL=postgres://{YOUR_POSTGRES_USER}:{YOUR_POSTGRES_PASSWORD}@{YOUR_POSTGRES_HOST}:{YOUR_POSTGRES_PORT}/{YOUR_POSTGRES_DB}
+
 # Environment variable for sending emails
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
