--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+dj-database-url==2.0.0
 Django==4.2.1
 django-allauth==0.54.0
 django-cloudinary-storage==0.3.0
 django-import-export==3.2.0
-dj-database-url==2.0.0
+django-rosetta==0.9.9
 gunicorn
 Pillow
 psycopg2-binary
