caching with redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,44 @@ name: mackdin
 
 services:
 
-  db:
-    image: postgres:14
-    container_name: postgres
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=mackdin
-    ports:
-      - 5432:5432
+  # django: 
+  #     build: 
+  #       context: .
+  #       dockerfile: ./docker/local/Dockerfile
+  #     image: clone-twitter-backend-dev
+  #     container_name: clone-twitter-backend-dev
+  #     volumes:
+  #       - .:/app
+  #     ports:
+  #       - 8000:8000
+  #     command: /start
+  #     depends_on:
+  #       - db
+  #       - redis
+
+  # db:
+  #   image: postgres:14
+  #   container_name: postgres
+  #   # environment:
+  #   #   - POSTGRES_USER=admin
+  #   #   - POSTGRES_PASSWORD=admin
+  #   #   - POSTGRES_DB=mackdin
+  #   env_file: 
+  #     - ./.env
+  #   ports:
+  #     - 5432:5432
   
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    environment: 
-      - PGADMIN_DEFAULT_EMAIL=admin@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   container_name: pgadmin
+  #   environment: 
+  #     - PGADMIN_DEFAULT_EMAIL=admin@gmail.com
+  #     - PGADMIN_DEFAULT_PASSWORD=admin
+  #   ports:
+  #     - "5050:80"
+  
+  redis:
+    image: redis:5
+    container_name: redis-mackdin
     ports:
-      - "5050:80"
+      - 6379:6379
